<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tweet__iv_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/default_profile_1_normal"/>

    <TextView
        android:id="@+id/tweet__tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tweet__iv_profile_image"
        android:text="@string/user_name"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tweet__tv_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tweet__tv_user_name"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/tweet__tv_user_name"
        android:text="@string/screen_name"
        android:textColor="#a0a0a0"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/tweet__tv_create_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/create_time"
        android:textColor="#a0a0a0"/>

    <TextView
        android:id="@+id/tweet__tv_text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tweet__tv_user_name"
        android:layout_below="@+id/tweet__tv_user_name"
        android:text="@string/text_body"/>


    <GridView
        android:id="@+id/tweet__gv_images"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tweet__tv_user_name"
        android:layout_below="@+id/tweet__tv_text_body"
        android:horizontalSpacing="2dp"
        android:stretchMode="columnWidth">
    </GridView>

    <!-- control bar -->
    <ImageView
        android:id="@+id/tweet__iv_reply"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/tweet__tv_user_name"
        android:layout_below="@+id/tweet__gv_images"
        android:contentDescription="@string/reply"
        android:paddingTop="4dp"
        android:src="@drawable/ic_action_reply_light"/>

    <ImageView
        android:id="@+id/tweet__iv_retweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tweet__tv_user_name"
        android:layout_below="@+id/tweet__gv_images"
        android:layout_marginStart="80dp"
        android:contentDescription="@string/retweet"
        android:paddingTop="8dp"
        android:src="@drawable/tw__ic_retweet_light"/>

    <TextView
        android:id="@+id/tweet__tv_retweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet__gv_images"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/tweet__iv_retweet"
        android:paddingTop="4dp"
        android:text="@string/zero"/>

    <ImageView
        android:id="@+id/tweet__iv_favorite"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignStart="@+id/tweet__tv_user_name"
        android:layout_below="@+id/tweet__gv_images"
        android:layout_marginStart="160dp"
        android:contentDescription="@string/favorite"
        android:paddingTop="4dp"
        android:src="@drawable/ic_tweet_action_inline_favorite"/>

    <TextView
        android:id="@+id/tweet__tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tweet__gv_images"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/tweet__iv_favorite"
        android:paddingTop="4dp"
        android:text="@string/zero"/>

</RelativeLayout>