<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.yuzhou.twitter.ui.ProfileActivity">


    <ImageView
        android:id="@+id/profile__iv_background"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/tw__blue_default"/>

    <ImageView
        android:id="@+id/profile__iv_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/default_profile_1_normal"/>

    <TextView
        android:id="@+id/profile__tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile__iv_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/user_name"
        android:textColor="#fff"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile__tv_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile__tv_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/screen_name"
        android:textColor="#fff"
        android:textSize="12sp"/>


    <GridLayout
        android:id="@+id/profile__grid"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/profile__iv_background"
        android:background="@color/tw__light_gray"
        android:columnCount="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="1dp"
            android:background="@color/tw__solid_white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/profile__tweet_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tweets"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="1dp"
            android:background="@color/tw__solid_white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/profile__following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="1dp"
            android:background="@color/tw__solid_white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/profile__followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#000"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAllCaps="true"
                android:textStyle="bold"/>
        </LinearLayout>

    </GridLayout>


    <include
        android:id="@+id/profile__timeline"
        layout="@layout/fragment_timeline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile__grid"
        android:layout_marginTop="4dp"/>

</RelativeLayout>
